2008-05-19  Peter Flanigan  <pjf@localhost>

	* CloudWeights.pm: Added sortable output fields
	
